re PR c++/49042 ([C++0x] wrong "protected" when using template and decltype)

PR c++/49042
	* pt.c (get_mostly_instantiated_function_type): Use
	push_deferring_access_checks rather than set flag_access_control.

From-SVN: r174164